<resources>
    <string name="app_name">Fit123</string>
    <string name="title_activity_nuevo_ejercicio">NuevoEjercicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Botones -->
    <string name="bGuardar">Guardar</string>

    <!--Menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_nuevoEjercicio">Nuevo Ejercicio</string>
    <string name="menu_nuevoEntrenamiento">Nuevo Entrenamiento</string>
    <string name="menu_verEntrenamientos">Ver entrenamientos</string>

    <!--Opciones -->
    <string name="cronometro">Cronómetro</string>
    <string name="cuantaAtras">Cuenta Atrás</string>
    <string name="repeticiones">Repeticiones</string>

    <!-- Ficheros -->
    <string name="ficheroEntrenamiento">Entrenamiento</string>
    <string name="ficheroEjercicios">Ejercicios</string>
    <string name="ficheroMisEntrenamientos">MisEntrenamientos</string>


    <string name="title_activity_cronometro">CronometroActivity</string>


    <string name="_00_00ms">00:00ms</string>
    <string name="tipo_de_ejercicio">Tipo de ejercicio: </string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio: </string>


    <string name="nav_drawer_open">Abrir</string>
    <string name="nav_drawer_close">Cerrar</string>
    <string name="siguiente_ejercicio">Siguiente ejercicio</string>
    <string name="nombre">Nombre:&#160;</string>
    <string name="tipo">Tipo:&#160;</string>
    <string name="tiempo">Tiempo:&#160;</string>
    <string name="_00_00">00:00</string>
    <string name="boton_inicio">Botón inicio</string>
    <string name="boton_pausa">Botón pausa</string>
    <string name="boton_stop">Botón stop</string>
    <string name="boton_empezar">Botón empezar</string>
    <string name="_repeticiones_0">0</string>
    <string name="nombreEjercicio">nombre</string>
    <string name="introducir_nombre">Debe introducir un nombre</string>
    <string name="insertar_tipo">Debe seleccionar un tipo</string>
    <string name="introducir_valor">Debe introducir un valor</string>
    <string name="formato_incorrecto">Formato incorrecto 00:00</string>
    <string name="entrenamiento_configurado">Entrenamiento configurado</string>


</resources>