<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/nombre_del_ejercicio" />

        <EditText
            android:id="@+id/tNombreEjercicio"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rgTipo"
        android:text="@string/tipo_de_ejercicio">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbCronometro"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/cronometro" />

            <EditText
                android:id="@+id/etCronometro"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:hint="@string/_00_00ms"
                android:inputType="time"
                android:visibility="invisible"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbCuantaAtras"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/cuantaAtras" />

            <EditText
                android:id="@+id/etCuentaAtras"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:hint="@string/_00_00ms"
                android:ems="10"
                android:inputType="time"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbRepeticiones"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/repeticiones" />

            <EditText
                android:id="@+id/etRepeticiones"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:inputType="number"
                android:visibility="invisible"/>
        </LinearLayout>

    </RadioGroup>


    <Button
        android:id="@+id/bGuardarEjercicio"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bGuardar" />



</LinearLayout>