<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CuentaAtrasFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvNombreEjercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pbProgress"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"
            android:text=""
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/pbProgress"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circulo_fin"
            android:indeterminate="false"
            android:max="60000"
            android:progress="0"
            android:progressDrawable="@drawable/circulo_ini"
            android:rotation="-90"/>

        <TextView
            android:id="@+id/tvTiempoPrevio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvCuentaAtras"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:textColor="@color/accentColor" />

        <TextView
            android:id="@+id/tvCuentaAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:countDown="false"
            android:hint="@string/_00_00"
            android:textColor="@color/accentColor"
            android:textSize="30sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBotonCuentaAtrasInicia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pbProgress"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"
            android:onClick="inicioCuentaAtras"
            android:layout_marginTop="113dp"
            app:srcCompat="@android:drawable/ic_media_play"
            android:contentDescription="@string/boton_inicio" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBotonCuentaAtrasPausa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pbProgress"
            android:layout_centerInParent="true"
            android:layout_marginTop="113dp"
            android:layout_marginBottom="16dp"
            android:onClick="pausaCuentaAtras"
            app:srcCompat="@android:drawable/ic_media_pause"
            android:contentDescription="@string/boton_pausa" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBotonCuentaAtrasStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pbProgress"
            android:layout_alignEnd="@id/pbProgress"
            android:layout_marginTop="113dp"
            android:onClick="finCuentaAtras"
            app:srcCompat="@android:drawable/ic_delete"
            android:contentDescription="@string/boton_stop" />


    </RelativeLayout>

</FrameLayout>