<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center">
<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">-->

    <!-- <include
         android:id="@+id/app_bar_nuevo_ejercicio"
         layout="@layout/nav_header"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/menu_options" />-->


    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->


    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nombre del ejercicio"
        android:textColor="@color/black"  />



    <RadioGroup
        android:text="Tipo de ejercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_cronometro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/cronometro" />
        <RadioButton android:id="@+id/radio_Repeticiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeticiones"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_cuantaAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuantaAtras"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selector"
        android:onClick="showTimePickerDialog" />

</LinearLayout>