<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="120dp" />
            <TextView
                android:id="@+id/tvNombreEjercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="120dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="120dp" />

            <TextView
                android:id="@+id/tvTipoEjercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="120dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempo"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="120dp" />
            <TextView
                android:id="@+id/tvCantidadEjercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="120dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llSwitch">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swElegir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="end"
            android:visibility="invisible"
            />
    </LinearLayout>


</LinearLayout>